# django-stripe-hooks

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  TODO.md  pyproject.toml  tpg.py
.github/workflows/: ci.yml  publish.yml
django_stripe_hooks/: admin.py  apps.py  managers.py  models.py  tpg.py  urls.py  utils.py  views.py
django_stripe_hooks/management/commands/: import_stripe.py  setup_stripe.py  stripe_webhooks.py
django_stripe_hooks/migrations/: 0001_initial.py  0002_alter_coupon_amount_off_alter_coupon_max_redemptions_and_more.py  0003_alter_coupon_amount_off.py  0004_alter_coupon_currency.py  0005_alter_balancetransaction_currency_and_more.py  0006_alter_paymentmethod_options_and_more.py  0007_remove_paymentintent_confirm.py  0008_remove_subscription_current_period_end_and_more.py  0009_remove_subscriptionitem_deleted.py  0010_remove_charge_invoice.py  0011_remove_paymentmethod_is_attached_coupon_valid_and_more.py
tests/: conftest.py  test_admin.py  test_apps.py  test_models.py  test_utils.py  test_webhooks.py
tests/project/: db.sqlite3-shm  db.sqlite3-wal
tests/project/project/: middleware.py  settings.py  urls.py
