[project]
name = 'django-stripe-hooks'
version = '0.0.1'
description = 'Webhooks for syncing Stripe payment data with your Django database.'
authors = [
    {name = 'Geoffrey Eisenbarth',email = 'geoffrey.eisenbarth@gmail.com'}
]
license = {text = 'MIT'}
readme = 'README.md'
requires-python = '>=3.12,<4'
dependencies = [
    'django (>=6.0)',
    'stripe (>=14.4.1,<15.0.0)',
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
mypy = '^1.19.1'
flake8 = '^7.3.0'
django-stubs = '^6.0.1'
codecov = '^2.1.13'
pre-commit = '^4.5.1'
coverage = '^7.13.5'
pytest = '^9.0.2'
pytest-django = '^4.12.0'
django-stubs-ext = '^6.0.1'
ipython = '^9.11.0'
django-environ = '^0.13.0'
ipdb = '^0.13.13'

[build-system]
requires = ['poetry-core>=2.0.0,<3.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'project.settings'
pythonpath = ['.', 'tests/project']
addopts = '--liveserver=localhost:8888'
testpaths = ['tests']

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = '3.12'
plugins = ['mypy_django_plugin.main']
ignore_missing_imports = true
packages = ['django_stripe_hooks']

[tool.django-stubs]
django_settings_module = 'tests.project.project.settings'
